--- a/index.html
+++ b/index.html
@@ -144,6 +144,152 @@
             </div>
         </div>
     <style>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Document</title>
+        <link rel="stylesheet" href="index.css">
+    </head>
+    <body>
+        <br>
+        <div class="header">
+            Wave Store
+        </div>
+        <br>
+        <div class="header2">
+            The best store ever !
+        </div>
+        <br><br>
+        <div class="Button_gayd">
+            <a href="#1">البوكيهات</a>
+            <a href="#2">الاكسسوارات</a>
+            <a href="#3">المكياج</a>
+            <a href="#" class="contact">تواصل معنا</a>
+        </div>
+        <div class="products">
+             الآكثر مبيعا
+        </div>
+        <div class="product-grid">
+            <div class="product">
+                <img src="1.jpeg" alt="صورة المنتج">
+                <div class="product-name">اسم المنتج</div>
+                <div class="product-price">السعر 7,000</div>
+            </div>
+            <div class="product">
+                <img src="1.jpeg" alt="صورة المنتج">
+                <div class="product-name">اسم المنتج</div>
+                <div class="product-price">السعر 7,000</div>
+            </div>
+            <div class="product">
+                <img src="1.jpeg" alt="صورة المنتج">
+                <div class="product-name">اسم المنتج</div>
+                <div class="product-price">السعر 7,000</div>
+            </div>
+            <div class="product">
+                <img src="1.jpeg" alt="صورة المنتج">
+                <div class="product-name">اسم المنتج</div>
+                <div class="product-price">السعر 7,000</div>
+            </div>
+            <div class="product">
+                <img src="1.jpeg" alt="صورة المنتج">
+                <div class="product-name">اسم المنتج</div>
+                <div class="product-price">السعر 7,000</div>
+            </div>
+        </div>
+        <br><br>
+        <div class="products" id="1" >
+           البوكيهات
+       </div>
+        <div class="product-grid">
+            <div class="product">
+                <img src="1.jpeg" alt="صورة المنتج">
+                <div class="product-name">اسم المنتج</div>
+                <div class="product-price">السعر 7,000</div>
+            </div>
+            <div class="product">
+                <img src="1.jpeg" alt="صورة المنتج">
+                <div class="product-name">اسم المنتج</div>
+                <div class="product-price">السعر 7,000</div>
+            </div>
+            <div class="product">
+                <img src="1.jpeg" alt="صورة المنتج">
+                <div class="product-name">اسم المنتج</div>
+                <div class="product-price">السعر 7,000</div>
+            </div>
+            <div class="product">
+                <img src="1.jpeg" alt="صورة المنتج">
+                <div class="product-name">اسم المنتج</div>
+                <div class="product-price">السعر 7,000</div>
+            </div>
+            <div class="product">
+                <img src="1.jpeg" alt="صورة المنتج">
+                <div class="product-name">اسم المنتج</div>
+                <div class="product-price">السعر 7,000</div>
+            </div>
+        </div>
+        <br><br>
+        <div class="products" id="2" >
+            الاكسسوارات
+       </div>
+        <div class="product-grid">
+            <div class="product">
+                <img src="1.jpeg" alt="صورة المنتج">
+                <div class="product-name">اسم المنتج</div>
+                <div class="product-price">السعر 7,000</div>
+            </div>
+            <div class="product">
+                <img src="1.jpeg" alt="صورة المنتج">
+                <div class="product-name">اسم المنتج</div>
+                <div class="product-price">السعر 7,000</div>
+            </div>
+            <div class="product">
+                <img src="1.jpeg" alt="صورة المنتج">
+                <div class="product-name">اسم المنتج</div>
+                <div class="product-price">السعر 7,000</div>
+            </div>
+            <div class="product">
+                <img src="1.jpeg" alt="صورة المنتج">
+                <div class="product-name">اسم المنتج</div>
+                <div class="product-price">السعر 7,000</div>
+            </div>
+            <div class="product">
+                <img src="1.jpeg" alt="صورة المنتج">
+                <div class="product-name">اسم المنتج</div>
+                <div class="product-price">السعر 7,000</div>
+            </div>
+        </div>
+        <br><br>
+        <div class="products" id="3">
+            المكياج
+       </div>
+        <div class="product-grid">
+            <div class="product">
+                <img src="1.jpeg" alt="صورة المنتج">
+                <div class="product-name">اسم المنتج</div>
+                <div class="product-price">السعر 7,000</div>
+            </div>
+            <div class="product">
+                <img src="1.jpeg" alt="صورة المنتج">
+                <div class="product-name">اسم المنتج</div>
+                <div class="product-price">السعر 7,000</div>
+            </div>
+            <div class="product">
+                <img src="1.jpeg" alt="صورة المنتج">
+                <div class="product-name">اسم المنتج</div>
+                <div class="product-price">السعر 7,000</div>
+            </div>
+            <div class="product">
+                <img src="1.jpeg" alt="صورة المنتج">
+                <div class="product-name">اسم المنتج</div>
+                <div class="product-price">السعر 7,000</div>
+            </div>
+            <div class="product">
+                <img src="1.jpeg" alt="صورة المنتج">
+                <div class="product-name">اسم المنتج</div>
+                <div class="product-price">السعر 7,000</div>
+            </div>
+        </div>
+    <style>
         body {
     font-family: ;
     background-color:#E8E0F7;
@@ -222,6 +368,9 @@
     color: red;
     font-size: 16px;
 }
+    </style>
+    </body>
+</html>
     </style>
     </body>
 </html>
