--- a/index.html
+++ b/index.html
@@ -144,154 +144,8 @@
             </div>
         </div>
     <style>
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Document</title>
-        <link rel="stylesheet" href="index.css">
-    </head>
-    <body>
-        <br>
-        <div class="header">
-            Wave Store
-        </div>
-        <br>
-        <div class="header2">
-            The best store ever !
-        </div>
-        <br><br>
-        <div class="Button_gayd">
-            <a href="#1">البوكيهات</a>
-            <a href="#2">الاكسسوارات</a>
-            <a href="#3">المكياج</a>
-            <a href="#" class="contact">تواصل معنا</a>
-        </div>
-        <div class="products">
-             الآكثر مبيعا
-        </div>
-        <div class="product-grid">
-            <div class="product">
-                <img src="1.jpeg" alt="صورة المنتج">
-                <div class="product-name">اسم المنتج</div>
-                <div class="product-price">السعر 7,000</div>
-            </div>
-            <div class="product">
-                <img src="1.jpeg" alt="صورة المنتج">
-                <div class="product-name">اسم المنتج</div>
-                <div class="product-price">السعر 7,000</div>
-            </div>
-            <div class="product">
-                <img src="1.jpeg" alt="صورة المنتج">
-                <div class="product-name">اسم المنتج</div>
-                <div class="product-price">السعر 7,000</div>
-            </div>
-            <div class="product">
-                <img src="1.jpeg" alt="صورة المنتج">
-                <div class="product-name">اسم المنتج</div>
-                <div class="product-price">السعر 7,000</div>
-            </div>
-            <div class="product">
-                <img src="1.jpeg" alt="صورة المنتج">
-                <div class="product-name">اسم المنتج</div>
-                <div class="product-price">السعر 7,000</div>
-            </div>
-        </div>
-        <br><br>
-        <div class="products" id="1" >
-           البوكيهات
-       </div>
-        <div class="product-grid">
-            <div class="product">
-                <img src="1.jpeg" alt="صورة المنتج">
-                <div class="product-name">اسم المنتج</div>
-                <div class="product-price">السعر 7,000</div>
-            </div>
-            <div class="product">
-                <img src="1.jpeg" alt="صورة المنتج">
-                <div class="product-name">اسم المنتج</div>
-                <div class="product-price">السعر 7,000</div>
-            </div>
-            <div class="product">
-                <img src="1.jpeg" alt="صورة المنتج">
-                <div class="product-name">اسم المنتج</div>
-                <div class="product-price">السعر 7,000</div>
-            </div>
-            <div class="product">
-                <img src="1.jpeg" alt="صورة المنتج">
-                <div class="product-name">اسم المنتج</div>
-                <div class="product-price">السعر 7,000</div>
-            </div>
-            <div class="product">
-                <img src="1.jpeg" alt="صورة المنتج">
-                <div class="product-name">اسم المنتج</div>
-                <div class="product-price">السعر 7,000</div>
-            </div>
-        </div>
-        <br><br>
-        <div class="products" id="2" >
-            الاكسسوارات
-       </div>
-        <div class="product-grid">
-            <div class="product">
-                <img src="1.jpeg" alt="صورة المنتج">
-                <div class="product-name">اسم المنتج</div>
-                <div class="product-price">السعر 7,000</div>
-            </div>
-            <div class="product">
-                <img src="1.jpeg" alt="صورة المنتج">
-                <div class="product-name">اسم المنتج</div>
-                <div class="product-price">السعر 7,000</div>
-            </div>
-            <div class="product">
-                <img src="1.jpeg" alt="صورة المنتج">
-                <div class="product-name">اسم المنتج</div>
-                <div class="product-price">السعر 7,000</div>
-            </div>
-            <div class="product">
-                <img src="1.jpeg" alt="صورة المنتج">
-                <div class="product-name">اسم المنتج</div>
-                <div class="product-price">السعر 7,000</div>
-            </div>
-            <div class="product">
-                <img src="1.jpeg" alt="صورة المنتج">
-                <div class="product-name">اسم المنتج</div>
-                <div class="product-price">السعر 7,000</div>
-            </div>
-        </div>
-        <br><br>
-        <div class="products" id="3">
-            المكياج
-       </div>
-        <div class="product-grid">
-            <div class="product">
-                <img src="1.jpeg" alt="صورة المنتج">
-                <div class="product-name">اسم المنتج</div>
-                <div class="product-price">السعر 7,000</div>
-            </div>
-            <div class="product">
-                <img src="1.jpeg" alt="صورة المنتج">
-                <div class="product-name">اسم المنتج</div>
-                <div class="product-price">السعر 7,000</div>
-            </div>
-            <div class="product">
-                <img src="1.jpeg" alt="صورة المنتج">
-                <div class="product-name">اسم المنتج</div>
-                <div class="product-price">السعر 7,000</div>
-            </div>
-            <div class="product">
-                <img src="1.jpeg" alt="صورة المنتج">
-                <div class="product-name">اسم المنتج</div>
-                <div class="product-price">السعر 7,000</div>
-            </div>
-            <div class="product">
-                <img src="1.jpeg" alt="صورة المنتج">
-                <div class="product-name">اسم المنتج</div>
-                <div class="product-price">السعر 7,000</div>
-            </div>
-        </div>
-    <style>
-        body {
-    font-family: ;
+body {
+    font-family: Arial, sans-serif;
     background-color:#E8E0F7;
     color: #480E8A;
     text-align: center;
@@ -340,8 +194,8 @@
     /*display: grid;*/
     /*display:inline-block*/
     /*grid-template-columns: repeat(2, 1fr);*/
-    gap: 20px;
-    max-width: px;
+    gap: ;
+    max-width: 100%;
     margin: auto;
 }
 .product {
@@ -350,12 +204,13 @@
     border-radius: 10px;
     padding: 5px;
     display:inline-block;
-    margin-top:10px;
+    margin:20px;
+    ;
     
     
 }
 .product img {
-    width: 150px;
+    width: 300px;
     max-width: 100%;
     border-radius: 10px;
 }
@@ -368,9 +223,6 @@
     color: red;
     font-size: 16px;
 }
-    </style>
-    </body>
-</html>
     </style>
     </body>
 </html>
