--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
         </div>
         <br><br>
-        <div class="products" id="1" >
+        <div class="products_name" id="1" >
            البوكيهات
        </div>
         <div class="product-grid">
@@ -83,7 +83,7 @@
             </div>
         </div>
         <br><br>
-        <div class="products" id="2" >
+        <div class="products_name" id="2" >
             الاكسسوارات
        </div>
         <div class="product-grid">
@@ -114,7 +114,7 @@
             </div>
         </div>
         <br><br>
-        <div class="products" id="3">
+        <div class="products_name" id="3">
             المكياج
        </div>
         <div class="product-grid">
