--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Document</title>
-        <link rel="stylesheet" href="index.css">
-        <link rel="icon" href="1.jpeg" type="image/x-icon">
-    </head>
-    <body>
+<head>
+    <title>Wave Store</title>
+    <link rel="stylesheet" href="index.css">
+    <link rel="icon" href="1.jpeg" type="image/x-icon">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
         <br>
         <div class="header">
             Wave Store
@@ -145,83 +146,22 @@
             </div>
         </div>
 
-    <style>
-        body {
-    font-family: Arial, sans-serif;
-    background-color:#E8E0F7;
-    color: #480E8A;
-    text-align: center;
-    padding: 20px;
-    direction: rtl;
-}
-.header {
-    font-size: 500%;
-    color: #480E8A;
-    margin-block: 50px;
-    font-family: 
-}
-.header2 {
-    font-size: 250%;
-    color: #480E8A;
-    font-family:
-}
-.Button_gayd {
-    margin: 20px;
-    font-size: 200%;
     
-}
-.Button_gayd a {
-    text-decoration: none;
-    color: purple;
-    background-color: #f0f0f0;
-    /*padding: 2px 4px;*/
-    padding: 15px;
-    border-radius: 25px;
-    margin: 10px;
-    display:inline-block;
-    border: 2px solid purple;
-}
-.Button_gayd a.contact {
-    border-color: red;
-    color: red;
-}
-.products_name {
-    font-size: 325%;
-    color: #00b2ff;
-    margin-bottom: 20px;
-    max-width:100%;
-    margin: 50px;
-}
-.product-grid {
-    max-width: 100%;
-    margin: auto;
-}
-.product {
-    background-color: #f0f0f0;
-    border: 2px solid purple;
-    border-radius: 10px;
-    padding: 5px;
-    display:inline-block;
-    margin:20px;
-}
-.product img {
-    width: 300px;
-    max-width: 100%;
-    border-radius: 10px;
-}
-.product-name {
-    margin-top: 10px;
-    font-size: 200%;
-    color: purple;
-}
-.product-price {
-    color: red;
-    font-size: 150%;
-}
-    </style>
-    <footer>
-
-
-    </footer>
+        <div class="footer">
+            <div class="social-links">
+                <a href="https://instagram.com/yourprofile" target="_blank" id="instagram">
+                    Instagram <i class="fa fa-instagram"></i> <!-- Replace with actual icon -->
+                </a>
+                <a href="https://tiktok.com/@yourprofile" target="_blank" id="tiktok">
+                    TikTok <i class="fa fa-tiktok"></i> <!-- Replace with actual icon -->
+                </a>
+                <a href="https://facebook.com/yourprofile" target="_blank" id="facebook">
+                    Facebook <i class="fa fa-facebook"></i> <!-- Replace with actual icon -->
+                </a>
+            </div>
+            <div class="footer-text">
+                جميع الحقوق محفوظة لويف ستور
+            </div>
+        </div>
     </body>
 </html>
