--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </div>
         <br>
         <div class="header2">
-            The best store ever !
+            موجه السعاده التي يستحقها قلبك 💜
         </div>
         <br><br>
         <div class="Button_gayd">
@@ -149,13 +149,13 @@
     
         <div class="footer">
             <div class="social-links">
-                <a href="https://instagram.com/yourprofile" target="_blank" id="instagram">
+                <a href="https://www.instagram.com/itswavestore?igsh=MW0xeHB4MXphczZwcQ==" target="_blank" id="instagram">
                     Instagram <i class="fa fa-instagram"></i> <!-- Replace with actual icon -->
                 </a>
-                <a href="https://tiktok.com/@yourprofile" target="_blank" id="tiktok">
+                <a href="https://www.tiktok.com/@itswavestore24?_t=8ooKQ3kGsqa&_r=1" target="_blank" id="tiktok">
                     TikTok <i class="fa fa-tiktok"></i> <!-- Replace with actual icon -->
                 </a>
-                <a href="https://facebook.com/yourprofile" target="_blank" id="facebook">
+                <a href="https://www.facebook.com/share/DmgEu51quW1vob1w/?mibextid=LQQJ4d" target="_blank" id="facebook">
                     Facebook <i class="fa fa-facebook"></i> <!-- Replace with actual icon -->
                 </a>
             </div>
