--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Wave Store</title>
-    <link rel="stylesheet" href="index.css">
-    <link rel="icon" href="1.jpeg" type="image/x-icon">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<body>
+    <head>
+        <title>Wave Store</title>
+        <link rel="stylesheet" href="index.css">
+        <link rel="icon" href="1.jpeg" type="image/x-icon">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    </head>
+    <body>
         <br>
         <div class="header">
             Wave Store
@@ -15,134 +15,254 @@
         <div class="header2">
             موجه السعاده التي يستحقها قلبك 💜
         </div>
+
         <br><br>
+
         <div class="Button_gayd">
             <a href="#1">البوكيهات</a>
             <a href="#2">الاكسسوارات</a>
-            <a href="#3">المكياج</a>
+            <a href="#3">الورد والحلويات</a>
             <a href="#" class="contact">تواصل معنا</a>
         </div>
         <div class="products_name">
              الآكثر مبيعا
         </div>
         <div class="product-grid">
+
             <div class="product">
-                <img src="1.jpeg" alt="صورة المنتج">
-                <div class="product-name">اسم المنتج</div>
-                <div class="product-price">السعر 7,000</div>
+                <img src="photos/17.jpg" alt="صورة المنتج">
+                <div class="product-name">بوكيه فراشات عادي </div>
+                <div class="product-price">الحجم الصغير:11,000<br>الحجم المتوسط:16,000<br>الحجم الكبير:18,000</div>
             </div>
+
             <div class="product">
-                <img src="1.jpeg" alt="صورة المنتج">
-                <div class="product-name">اسم المنتج</div>
-                <div class="product-price">السعر 7,000</div>
+                <img src="photos/18.jpg" alt="صورة المنتج">
+                <div class="product-name">بوكيه فراشات عادي </div>
+                <div class="product-price">الحجم الصغير:11,000<br>الحجم المتوسط:16,000<br>الحجم الكبير:18,000</div>
             </div>
+
             <div class="product">
-                <img src="1.jpeg" alt="صورة المنتج">
-                <div class="product-name">اسم المنتج</div>
-                <div class="product-price">السعر 7,000</div>
+                <img src="photos/19.jpg" alt="صورة المنتج">
+                <div class="product-name">بوكيه فراشات عادي </div>
+                <div class="product-price">الحجم الصغير:11,000<br>الحجم المتوسط:16,000<br>الحجم الكبير:18,000</div>
             </div>
+
+
             <div class="product">
-                <img src="1.jpeg" alt="صورة المنتج">
-                <div class="product-name">اسم المنتج</div>
-                <div class="product-price">السعر 7,000</div>
+                <img src="photos/21.jpg" alt="صورة المنتج">
+                <div class="product-name">بوكيه فراشات عادي </div>
+                <div class="product-price">الحجم الصغير:11,000<br>الحجم المتوسط:16,000<br>الحجم الكبير:18,000</div>
             </div>
+
             <div class="product">
-                <img src="1.jpeg" alt="صورة المنتج">
-                <div class="product-name">اسم المنتج</div>
-                <div class="product-price">السعر 7,000</div>
+                <img src="photos/22.jpg" alt="صورة المنتج">
+                <div class="product-name">بوكيه فراشات عادي </div>
+                <div class="product-price">الحجم الصغير:11,000<br>الحجم المتوسط:16,000<br>الحجم الكبير:18,000</div>
             </div>
+
+            <div class="product">
+                <img src="photos/23.jpg" alt="صورة المنتج">
+                <div class="product-name">بوكيه فراشات عادي </div>
+                <div class="product-price">الحجم الصغير:11,000<br>الحجم المتوسط:16,000<br>الحجم الكبير:18,000</div>
+            </div>
+
         </div>
-        <br><br>
+
+        <!---------------------------------------------------------------------------------->
+
+
         <div class="products_name" id="1" >
            البوكيهات
        </div>
+        
         <div class="product-grid">
             <div class="product">
-                <img src="1.jpeg" alt="صورة المنتج">
-                <div class="product-name">اسم المنتج</div>
-                <div class="product-price">السعر 7,000</div>
+                <img src="photos/7.jpg" alt="صورة المنتج">
+                <div class="product-name">بوكيه فراشات منفوش</div>
+                <div class="product-price">الحجم الصغير:13,000<br>الحجم المتوسط:18,000<br>الحجم الكبير:27,000</div>
             </div>
+
             <div class="product">
-                <img src="1.jpeg" alt="صورة المنتج">
-                <div class="product-name">اسم المنتج</div>
-                <div class="product-price">السعر 7,000</div>
+                <img src="photos/8.jpg" alt="صورة المنتج">
+                <div class="product-name">بوكيه فراشات منفوش</div>
+                <div class="product-price">الحجم الصغير:13,000<br>الحجم المتوسط:18,000<br>الحجم الكبير:27,000</div>
             </div>
+
             <div class="product">
-                <img src="1.jpeg" alt="صورة المنتج">
-                <div class="product-name">اسم المنتج</div>
-                <div class="product-price">السعر 7,000</div>
+                <img src="photos/4.jpg" alt="صورة المنتج">
+                <div class="product-name">بوكيه ورد وفراشات <br>(وردي)</div>
+                <div class="product-price">الحجم المتوسط:20,000<br>الحجم الكبير 25,000</div>
             </div>
+            
             <div class="product">
-                <img src="1.jpeg" alt="صورة المنتج">
-                <div class="product-name">اسم المنتج</div>
-                <div class="product-price">السعر 7,000</div>
+                <img src="photos/5.jpg" alt="صورة المنتج">
+                <div class="product-name">بوكيه ورد وفراشات <br>(سمائي )</div>
+                <div class="product-price">الحجم المتوسط:20,000<br>الحجم الكبير 25,000</div>
             </div>
+
             <div class="product">
-                <img src="1.jpeg" alt="صورة المنتج">
-                <div class="product-name">اسم المنتج</div>
+                <img src="photos/11.jpg" alt="صورة المنتج">
+                <div class="product-name">بوكيه النجوم </div>
+                <div class="product-price">الحجم المتوسط:17,000<br>الحجم الكبير 27,000</div>
+            </div>
+
+            <div class="product">
+                <img src="photos/9.jpg" alt="صورة المنتج">
+                <div class="product-name">بوكيه النجوم </div>
+                <div class="product-price">الحجم المتوسط:17,000<br>الحجم الكبير 27,000</div>
+            </div>
+
+            <div class="product">
+                <img src="photos/13.jpg" alt="صورة المنتج">
+                <div class="product-name">بوكيه النجوم </div>
+                <div class="product-price">VIP</div>
+            </div>
+
+            <div class="product">
+                <img src="photos/14.jpg" alt="صورة المنتج">
+                <div class="product-name">بوكيه منفوش </div>
+                <div class="product-price">الحجم الصغير:13,000<br>الحجم المتوسط:18,000<br>الحجم الكبير:27,000</div>
+            </div>
+
+            <div class="product">
+                <img src="photos/16.jpg" alt="صورة المنتج">
+                <div class="product-name">بوكيه منفوش </div>
+                <div class="product-price">الحجم الصغير:13,000<br>الحجم المتوسط:18,000<br>الحجم الكبير:27,000</div>
+            </div>
+
+            <div class="product">
+                <img src="photos/15.jpg" alt="صورة المنتج">
+                <div class="product-name">بوكيه منفوش </div>
+                <div class="product-price">الحجم الصغير:13,000<br>الحجم المتوسط:18,000<br>الحجم الكبير:27,000</div>
+            </div>
+
+            <div class="product">
+                <img src="photos/24.jpg" alt="صورة المنتج">
+                <div class="product-name">بوكيه الفراشات <br>مع اضافه ورد مجفف</div>
+                <div class="product-price">الحجم الصغير:13,000<br>الحجم المتوسط:18,000<br>الحجم الكبير:27,000</div>
+            </div>
+
+            <div class="product">
+                <img src="photos/25.jpg" alt="صورة المنتج">
+                <div class="product-name">بوكيه الفراشات <br>مع اضافه ورد مجفف</div>
+                <div class="product-price">الحجم الصغير:13,000<br>الحجم المتوسط:18,000<br>الحجم الكبير:27,000</div>
+            </div>
+
+            <div class="product">
+                <img src="photos/2.jpeg" alt="صورة المنتج">
+                <div class="product-name">بوكيه فراشات منفوش</div>
                 <div class="product-price">السعر 7,000</div>
             </div>
         </div>
+
+
         <br><br>
+        <!---------------------------------------------------------------------------------->
+
+        <div class="product-grid">
         <div class="products_name" id="2" >
             الاكسسوارات
        </div>
+
+            <div class="product">
+                <img src="photos/26.jpg" alt="صورة المنتج">
+                <div class="product-name">طوق ورد جبسوفيل</div>
+                <div class="product-price"></div>
+            </div>
+
+            <div class="product">
+                <img src="photos/27.jpg" alt="صورة المنتج">
+                <div class="product-name">طوق ورد جبسوفيل</div>
+                <div class="product-price">السعر: 8,000</div>
+            </div>
+
+        </div>
+        <!---------------------------------------------------------------------------------->
+
+        <div class="products_name" id="3">
+            بوكيهات الورد والحلويات 
+       </div>
+       <div class="header3">هذه المنتجات خاصة واسعارها ليست ثابته</div>
         <div class="product-grid">
             <div class="product">
-                <img src="1.jpeg" alt="صورة المنتج">
-                <div class="product-name">اسم المنتج</div>
-                <div class="product-price">السعر 7,000</div>
+                <img src="photos/29.jpg" alt="صورة المنتج">
+                <div class="product-name">...</div>
+            </div>
+
+            <div class="product">
+                <img src="photos/40.jpg" alt="صورة المنتج">
+                <div class="product-name"></div>
+                <div class="product-price">ألسعر:15,000</div>
             </div>
             <div class="product">
-                <img src="1.jpeg" alt="صورة المنتج">
-                <div class="product-name">اسم المنتج</div>
-                <div class="product-price">السعر 7,000</div>
+                <img src="photos/30.jpg" alt="صورة المنتج">
+                <div class="product-name">...</div>
             </div>
+
             <div class="product">
-                <img src="1.jpeg" alt="صورة المنتج">
-                <div class="product-name">اسم المنتج</div>
-                <div class="product-price">السعر 7,000</div>
+                <img src="photos/31.jpg" alt="صورة المنتج">
+                <div class="product-name">...</div>
             </div>
+
             <div class="product">
-                <img src="1.jpeg" alt="صورة المنتج">
-                <div class="product-name">اسم المنتج</div>
-                <div class="product-price">السعر 7,000</div>
+                <img src="photos/32.jpg" alt="صورة المنتج">
+                <div class="product-name">...</div>
             </div>
+
             <div class="product">
-                <img src="1.jpeg" alt="صورة المنتج">
-                <div class="product-name">اسم المنتج</div>
-                <div class="product-price">السعر 7,000</div>
+                <img src="photos/33.jpg" alt="صورة المنتج">
+                <div class="product-name">...</div>
+            </div>
+
+            <div class="product">
+                <img src="photos/34.jpg" alt="صورة المنتج">
+                <div class="product-name">...</div>
+            </div>
+
+            <div class="product">
+                <img src="photos/35.jpg" alt="صورة المنتج">
+                <div class="product-name">...</div>
+            </div>
+
+            <div class="product">
+                <img src="photos/36.jpg" alt="صورة المنتج">
+                <div class="product-name">...</div>
+            </div>
+
+            <div class="product">
+                <img src="photos/37.jpg" alt="صورة المنتج">
+                <div class="product-name">...</div>
+            </div>
+
+            <div class="product">
+                <img src="photos/38.jpg" alt="صورة المنتج">
+                <div class="product-name">...</div>
+            </div>
+
+            <div class="product">
+                <img src="photos/41.jpg" alt="صورة المنتج">
+                <div class="product-name">...</div>
+            </div>
+
+            <div class="product">
+                <img src="photos/42.jpg" alt="صورة المنتج">
+                <div class="product-name">...</div>
             </div>
         </div>
-        <br><br>
+
         <div class="products_name" id="3">
             المكياج
        </div>
         <div class="product-grid">
             <div class="product">
                 <img src="1.jpeg" alt="صورة المنتج">
-                <div class="product-name">اسم المنتج</div>
-                <div class="product-price">السعر 7,000</div>
+                <div class="product-name"> قريبا</div>
+                <div class="product-price">السعر</div>
             </div>
             <div class="product">
                 <img src="1.jpeg" alt="صورة المنتج">
-                <div class="product-name">اسم المنتج</div>
-                <div class="product-price">السعر 7,000</div>
-            </div>
-            <div class="product">
-                <img src="1.jpeg" alt="صورة المنتج">
-                <div class="product-name">اسم المنتج</div>
-                <div class="product-price">السعر 7,000</div>
-            </div>
-            <div class="product">
-                <img src="1.jpeg" alt="صورة المنتج">
-                <div class="product-name">اسم المنتج</div>
-                <div class="product-price">السعر 7,000</div>
-            </div>
-            <div class="product">
-                <img src="1.jpeg" alt="صورة المنتج">
-                <div class="product-name">اسم المنتج</div>
-                <div class="product-price">السعر 7,000</div>
+                <div class="product-name"> قريبا</div>
+                <div class="product-price">السعر</div>
             </div>
         </div>
 
